added forms and typography css files, started to make a sample template

--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
 @import url('css/reset.css');
+@import url('css/typography.css');
+@import url('css/general.css');
+@import url('css/forms.css');
 @import url('css/print.css');
 @import url('css/mobile.css');
