--- a/css/reset.css
+++ b/css/reset.css
@@ -15,5 +15,8 @@ table { border-collapse: collapse; border-spacing: 0; }
 hr { display: block; height: 1px; border: 0; border-top: 1px solid #cccccc; margin: 1em 0; padding: 0; }
 input, select { vertical-align: middle; }
 
+/* Remove it if you don't like it. */
+:focus{outline:none;}
+
 
 
