--- a/css/typography.css
+++ b/css/typography.css
@@ -4,3 +4,17 @@ body { font: 13px/1.231 arial, helvetica, sans-serif; *font-size: small; *font: 
 select, input, button, textarea, button { font: 99% arial, helvetica, sans-serif; }
 table { font-size: inherit; font: 100%; }
 pre, code, kbd, samp, tt { font-family: monospace; *font-size: 108%; line-height: 100%; }
+
+
+/*DEV MODE*/
+body { background:url("../images/baseline.gif");}
+
+
+
+/*Font Stacks*/
+
+/* Helvetica, Arial, "DejaVu Sans", "Liberation sans", "Bitstream Vera Sans", sans-serif; */
+/* "Monaco", consolas, "Droid Sans Mono", "Courier New", Courier, monospace; */
+/* "lucida grande","Segoe UI","Droid Sans" */
+/* "Myriad Pro", */
+/* Baskerville, "Goudy Old Style", Palatino, "Book Antiqua", "URW Chancery L", Gentium, serif; */
