--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ __________________________________*/
 
 @import url('css/reset.css');
 @import url('css/typography.css');
-@import url('css/general.css');
+@import url('css/general.css'); /* be carefull about importing this one*/
 @import url('css/forms.css');
 @import url('css/tables.css');
 @import url('css/print.css');
